# Llama-Term

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  ui.rs
