[package]
name = "ollama_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama-rs = { version = "0.3.2", features = ["stream"] }
ratatui = "0.28"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.31"
chrono = "0.4"
arboard = "3.4"
dirs = "5.0"
